Fix footer menu item scrunching on md screens
This adds some bottom padding (and tweaks the social top margin) so that
on md screens where the footer nav does not display on 1 line, the items
have spacing so they are not too close to be legible and tappable.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -132,8 +132,14 @@ a.site-title {
       margin-right: 24px;
     }
 
+    .link-list {
+      li {
+        padding-bottom: $spacing-unit;
+      }
+    }
+
     .site-footer_content__social {
-      margin-top: 34px;
+      margin-top: $spacing-unit / 2;
 
       @include media-query($on-palm) {
         margin-top: 0;
